--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <footer>
-        <div class="container"> <!-- Тут в принципе можно было его и не задавать. Все равно все по центру. Если его убрать все будет работать. -->
+        <div class="container">
             <div class="logo">
                 <a href="index.html"><img src="img/Logo.png" alt="logo"></a>
             </div>
+            <h2>we are social</h2>
             <ul class="social-list">
-                <h2>we are social</h2>
                 <li class="social-list__item">
                     <a class="social-list__link" href="https://www.facebook.com/" target="_blank">
                         <i class="fab fa-facebook-f"></i>
